{
    "name": "PlayerActions",
    "maps": [
        {
            "name": "Movement",
            "id": "e1cd8e91-f9bd-4082-adc8-fc01c3b654e5",
            "actions": [
                {
                    "name": "Move",
                    "type": "Value",
                    "id": "8fd5881d-3fa9-41c9-85be-3c605654b3e7",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                }
            ],
            "bindings": [
                {
                    "name": "2D Vector",
                    "id": "4c2ff169-a0d5-497d-a6db-b76b9e36ceb9",
                    "path": "2DVector",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Move",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "up",
                    "id": "c1e562f8-80b7-4c62-b1fb-d248fb67844a",
                    "path": "<Keyboard>/w",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "down",
                    "id": "0e65a7a4-a008-4426-82ea-3485cc7167ee",
                    "path": "<Keyboard>/s",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "left",
                    "id": "75cc1ca7-0b10-483c-8f53-834892248408",
                    "path": "<Keyboard>/a",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "right",
                    "id": "268e5384-f498-42e9-be7b-d482b28df8d7",
                    "path": "<Keyboard>/d",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": true
                }
            ]
        },
        {
            "name": "Attack",
            "id": "77f6f48a-405a-430a-ace5-290bbc9358db",
            "actions": [
                {
                    "name": "ClickAttack",
                    "type": "Button",
                    "id": "deab877c-e938-43cd-b955-1b432945c8a0",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "5408f72d-f642-46e5-b8e9-408b38c47a99",
                    "path": "<Keyboard>/j",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "ClickAttack",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        },
        {
            "name": "Dialogue",
            "id": "fcff57cb-6906-4428-90f8-369f9c94b9c3",
            "actions": [
                {
                    "name": "Interact",
                    "type": "Button",
                    "id": "8ce7dc51-3834-44d2-92e3-11df047d0cb2",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Continue",
                    "type": "Button",
                    "id": "bf8d6481-a0bb-4eb1-97a3-b7b7b7bced79",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "05a54659-064e-4816-8a3c-c751d7e2591d",
                    "path": "<Keyboard>/b",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Interact",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "775e4037-197f-4603-ad18-65944a637bc8",
                    "path": "<Keyboard>/enter",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Continue",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}